--- a/src/InvoiceList.css
+++ b/src/InvoiceList.css
@@ -1,4 +1,51 @@
-.InvoiceList-container {
-    width: 800px;
-    margin: 60px auto;
+.InvoiceList {
+    margin-top: 60px;
+}
+
+.InvoiceList-listItem {
+    background: #FFFFFF;
+    height: 74px;
+    max-width: 100%;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
+    box-shadow: 0px 4px 14px 0px rgba(55,59,84,0.05);
+    
+}
+
+.InvoiceList-listItem div {
+    font-weight: 700;
+}
+
+.Invoice-id {
+    color: #7C5CFB;
+}
+
+.Invoice-id span {
+    color: #09090E;
+}
+
+.Invoice-dueDate,
+.Invoice-name {
+color: #C4C4C4;
+}
+
+.Invoice-amount {
+    font-size: 18px;
+    color: #09090E;
+}
+
+.InvoiceList-listItemRight {
+    display: flex; 
+    align-items: center;
+}
+.Invoice-status {
+    padding: 14px 26px;
+    background: rgba(51, 216, 160, .1);
+
+}
+.Invoice-status span {
+color: #33D8A0;
 }
