--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 .App {
   display: flex;
-  background: #F8F7FC;
+  background: #f8f7fc;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
 
-h1, h2, h3, h4, h5, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   margin: 0;
 }
 
@@ -16,11 +21,27 @@ h1 {
   margin-bottom: 10px;
 }
 
-button  {
+button {
   border: 0;
   background: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
+}
+
+label {
+  font-family: "Montserrat", sans-serif;
+  color: #c4c4c4;
+  font-weight: 700;
+  font-size: 11px;
+  margin-bottom: 0.25rem;
+}
+
+input {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border-color: #c4c4c4;
+  outline: none;
+  box-shadow: none;
 }
 
 ul {
