--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,12 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+/* App Overlay */
+.overlay {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
