--- a/src/components/InvoiceForm.css
+++ b/src/components/InvoiceForm.css
@@ -3,12 +3,18 @@
   z-index: 1;
   top: 0;
   left: 0;
-  width: 40%;
-  height: 100%;
+  max-width: 600px;
+  max-height: 91vh;
   background: #fff;
   margin-left: 100px;
   padding: 2rem;
   border-radius: 0 30px 0 0;
+  overflow: auto;
+  display: none;
+}
+
+.InvoiceForm.active {
+  display: block;
 }
 
 .InvoiceForm-group {
@@ -17,8 +23,61 @@
   margin-top: -1rem;
 }
 
+.InvoiceForm-group .InvoiceForm-item:last-of-type {
+  padding-right: 0;
+}
+
 .InvoiceForm-item {
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin: 1rem 0;
+  padding-right: 10px;
+}
+
+.InvoiceForm-item #clientItemName {
+  width: 300px;
+}
+
+.InvoiceForm-item #clientItemQuantity,
+.InvoiceForm-item #clientItemPrice,
+.InvoiceForm-item #clientItemTotal {
+  max-width: 60px;
+}
+
+.InvoiceForm-item input {
+  border: 1px solid #ccc;
+}
+
+.InvoiceForm-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.InvoiceForm-cancelButton {
+  background: #ccc;
+  padding: 12px 20px;
+  border-radius: 30px;
+  color: #fff;
+  margin-right: 0.5rem;
+}
+
+.InvoiceForm-submitButton {
+  background: #7d5efa;
+  padding: 12px 20px;
+  border-radius: 30px;
+  color: #fff;
+}
+
+.InvoiceForm::-webkit-scrollbar {
+  width: 12px; /* width of the entire scrollbar */
+}
+
+.InvoiceForm::-webkit-scrollbar-track {
+  background: #fff; /* color of the tracking area */
+}
+
+.InvoiceForm::-webkit-scrollbar-thumb {
+  background-color: #ccc; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
 }
