--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
+  position: fixed;
   z-index: 2;
 }
 .Sidebar-logo {
