--- a/src/components/Invoice.css
+++ b/src/components/Invoice.css
@@ -3,81 +3,123 @@
   margin: 60px auto;
 }
 
+.Invoice-wrapper h3,
+.biller-address {
+  margin-top: 1rem;
+  color: #9196ac;
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+.client-address span:not(.client-name) {
+  color: #9196ac;
+  font-size: 0.8rem;
+}
+
+.Invoice-wrapper h3 + div,
+.invoiceId {
+  margin-top: 0.25rem;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
 .Invoice-header,
 .Invoice-main {
-    margin-top: 1.5rem;
-    border-radius: 8px;
-    background: #FFFFFF;
+  margin-top: 1.5rem;
+  border-radius: 8px;
+  background: #ffffff;
 }
 
 .Invoice-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1.5rem;
-    padding: 1.75rem;
-    border-radius: 8px;
-    background: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+  padding: 1.75rem;
+  border-radius: 8px;
+  background: #ffffff;
 }
 
 .Invoice-main {
-    padding: 2.5rem;
+  padding: 2.5rem;
 }
 
 .Invoice-main--header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .Invoice-main--header div:nth-of-type(2) {
-    text-align: right;
+  text-align: right;
 }
 
 .itemList {
-    
-    padding: 1.5rem;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    margin-top: 1.5rem;
-    background: #f2f2f2;
+  padding: 1.5rem;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  margin-top: 1.5rem;
+  background: #f2f2f2;
+}
+
+.itemList .itemName,
+.itemList .itemTotal {
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+
+.itemList .itemQuantity,
+.itemList .itemPrice {
+  color: #9196ac;
+  font-size: 1.1rem;
+  font-weight: 700;
 }
 
 .itemList .header,
-.itemList .row  {
-    display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr;
+.itemList .row {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  margin-bottom: 1.5rem;
 }
 
 .itemList .itemQuantity {
-    text-align: center;
+  text-align: center;
 }
 
 .itemList .itemPrice,
 .itemList .itemTotal {
-    text-align: right;
+  text-align: right;
 }
 
 .Invoice-footer {
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-    padding: 1.5rem;
-    background: #ccc;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  padding: 1.5rem;
+  background: #373b54;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Invoice-footer h3 {
+  margin-top: 0;
+}
+
+.Invoice-footer .invoiceTotal {
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .Invoice-main .body {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    margin-top: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  margin-top: 1rem;
 }
 
 .btn {
-    padding: 1rem 1.5rem;
-    margin: 0 .25rem;
-    border-radius:  22px;
+  padding: 1rem 1.5rem;
+  margin: 0 0.25rem;
+  border-radius: 22px;
 }
 
 .btn-edit {
@@ -85,11 +127,11 @@
 }
 
 .btn-delete {
-    background: #ED5855;
-    color: #fff;
+  background: #ed5855;
+  color: #fff;
 }
 
 .btn-markPaid {
-    color: #fff;
-    background: #7C5DF5;
+  color: #fff;
+  background: #7c5df5;
 }
